--- a/backEnd/src/main/resources/application.yml
+++ b/backEnd/src/main/resources/application.yml
@@ -13,6 +13,7 @@ spring:
     serialization:
       fail-on-empty-beans: false
 
+
   datasource:
     url: jdbc:h2:./db_dev;MODE=MySQL
     username: sa
@@ -21,12 +22,21 @@ spring:
     hikari:
       auto-commit: false
 
+
   jpa:
     open-in-view: false
     hibernate:
       ddl-auto: update
     show-sql: false
     database-platform: org.hibernate.dialect.H2Dialect
+
+
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
+      settings:
+        web-allow-others: true
 
 
 logging:
@@ -38,4 +48,3 @@ logging:
 
 springdoc:
   default-produces-media-type: application/json;charset=UTF-8
-
