--- a/backEnd/src/main/resources/application.yml
+++ b/backEnd/src/main/resources/application.yml
@@ -14,12 +14,19 @@ spring:
       fail-on-empty-beans: false
 
   datasource:
-    url: jdbc:h2:./db_dev;MODE=MySQL
+    url: jdbc:h2:./db_dev;MODE=MySQL;INIT=RUNSCRIPT FROM 'classpath:data.sql'
     username: sa
     password:
     driver-class-name: org.h2.Driver
     hikari:
       auto-commit: false
+
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
+      settings:
+        web-allow-others: true
 
   jpa:
     open-in-view: false
