--- a/backEnd/src/main/resources/application.yml
+++ b/backEnd/src/main/resources/application.yml
@@ -15,7 +15,7 @@ spring:
 
 
   datasource:
-    url: jdbc:h2:./db_dev;MODE=MySQL
+    url: jdbc:h2:./db_dev;MODE=MySQL;INIT=RUNSCRIPT FROM 'classpath:data.sql'
     username: sa
     password:
     driver-class-name: org.h2.Driver
