✨ feat: 사용자 - 전체 경매 상품 리스트 조회

--- a/backEnd/src/main/resources/application.yml
+++ b/backEnd/src/main/resources/application.yml
@@ -15,7 +15,7 @@ spring:
 
 
   datasource:
-    url: jdbc:h2:./db_dev;MODE=MySQL
+    url: jdbc:h2:./db_dev;MODE=MySQL;INIT=RUNSCRIPT FROM 'classpath:data.sql'
     username: sa
     password:
     driver-class-name: org.h2.Driver
@@ -48,3 +48,7 @@ logging:
 
 springdoc:
   default-produces-media-type: application/json;charset=UTF-8
+
+
+
+
