--- a/backEnd/build.gradle
+++ b/backEnd/build.gradle
@@ -24,6 +24,11 @@ repositories {
 }
 
 dependencies {
+    // JJWT 최신 버전 (0.12.6) 추가
+    implementation("io.jsonwebtoken:jjwt-api:0.12.6")
+    runtimeOnly("io.jsonwebtoken:jjwt-impl:0.12.6")
+    runtimeOnly("io.jsonwebtoken:jjwt-jackson:0.12.6")
+
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
