--- a/backEnd/build.gradle
+++ b/backEnd/build.gradle
@@ -26,6 +26,7 @@ repositories {
 dependencies {
     // JJWT 최신 버전 (0.12.6) 추가
     implementation("io.jsonwebtoken:jjwt-api:0.12.6")
+    developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly("io.jsonwebtoken:jjwt-impl:0.12.6")
     runtimeOnly("io.jsonwebtoken:jjwt-jackson:0.12.6")
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
