--- a/backEnd/src/main/resources/application.yml
+++ b/backEnd/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8080
+  port: 7002
 
 #spring:
 #  output:
@@ -15,7 +15,7 @@ spring:
     redis:
       host: localhost
       port: 6379
-      password: ""
+      password: "pk2258"
 
   profiles:
     active: dev
