--- a/backEnd/build.gradle
+++ b/backEnd/build.gradle
@@ -51,6 +51,7 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter-websocket'
 
+    implementation 'org.springframework.boot:spring-boot-starter-mail'
 }
 
 tasks.named('test') {
