docker compose.yml 수정2(위치 변경)

--- a/backEnd/docker-compose.yml
+++ b/backEnd/docker-compose.yml
@@ -49,6 +49,7 @@ services:
     restart: always
 
   spring-app:
+#    build: build/generated/sources/annotationProcessor/java/main
     build: .
     container_name: spring-app
     ports:
