frontend Dockerfile 생성 및 docker-compose.yml에 frontend 설정 추가

--- a/backEnd/docker-compose.yml
+++ b/backEnd/docker-compose.yml
@@ -72,6 +72,16 @@ services:
 #  redis-net:
 #    driver: bridge
 
+  # 여기에 프론트엔드 서비스 추가
+  frontend:
+    build: ../frontend
+    container_name: next-frontend
+    ports:
+      - "3000:3000"
+    networks:
+      - app-network
+    restart: always
+
 networks:
   app-network:
     driver: bridge
