frontend Dockerfile 생성 및 docker-compose.yml에 frontend 수정9

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,23 +2,21 @@ FROM node:18-alpine
 
 WORKDIR /app
 
-# 의존성 파일 복사
+# 의존성 파일 복사 및 설치
 COPY package*.json ./
-
-# 필요한 패키지 명시적 설치 (axios 추가)
 RUN npm install
-RUN npm install axios
 
 # 소스 코드 복사
 COPY . .
 
-# ESLint 검사 건너뛰기
-ENV NEXT_TELEMETRY_DISABLED 1
-ENV ESLINT_NO_DEV_ERRORS true
-ENV NODE_ENV production
+# 환경 변수 설정
+ENV NEXT_TELEMETRY_DISABLED=1
+ENV NODE_ENV=production
+ENV ESLINT_NO_DEV_ERRORS=true
+ENV DISABLE_ESLINT_PLUGIN=true
 
-# 빌드
-RUN npm run build --no-lint
+# 빌드 시 린트 검사 비활성화
+RUN npm run build || npm run build --no-lint
 
 EXPOSE 3000
 
