--- a/backEnd/src/main/resources/application.yml
+++ b/backEnd/src/main/resources/application.yml
@@ -16,7 +16,7 @@ spring:
       fail-on-empty-beans: false
 
   datasource:
-    url: jdbc:h2:./db_dev;MODE=MySQL;INIT=RUNSCRIPT FROM 'classpath:data.sql'
+    url: jdbc:mysql://mysql:3306/awsTestDb?useSSL=falseL;INIT=RUNSCRIPT FROM 'classpath:data.sql'
     username: sa
     password:
     driver-class-name: org.h2.Driver
