--- a/backEnd/src/main/resources/application.yml
+++ b/backEnd/src/main/resources/application.yml
@@ -4,7 +4,7 @@ server:
 spring:
   data:
     redis:
-      host: localhost
+      host: 35.203.149.35
       port: 6379
       password: "pk2258"
 
