--- a/backEnd/build.gradle
+++ b/backEnd/build.gradle
@@ -61,3 +61,7 @@ tasks.named('test') {
 tasks.withType(JavaCompile){
     options.encoding = "UTF-8"
 }
+
+tasks.withType(Test).configureEach {
+    maxParallelForks = Runtime.runtime.availableProcessors().intdiv(2) ?: 1
+}
