guthub action config.
guthub action config.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,10 +3,10 @@ name: CI/CD Pipeline  # GitHub Actions 워크플로우의 이름
 on:
   push:  # master 브랜치로의 푸시 이벤트 발생 시 워크플로우 실행
     branches:
-      - master
+      - main
   pull_request:  # master 브랜치로의 풀 리퀘스트 이벤트 발생 시 워크플로우 실행
     branches:
-      - master
+      - main
 
 jobs:
   build:  # build라는 이름의 job 정의
