--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,7 @@ jobs:
           restore-keys: ${{ runner.os }}-gradle  # 캐시 복원 키
 
       - name: Build with Gradle  # Step 4: Gradle로 프로젝트 빌드
-        run: ./gradlew clean build  # Gradle의 clean 및 build 명령 실행
+        run: ./backEnd/gradlew clean build  # Gradle의 clean 및 build 명령 실행
 
       - name: Login to Docker Hub  # Step 5: Docker Hub 로그인
         run: docker login -u "${{ secrets.DOCKER_USERNAME }}" -p "${{ secrets.DOCKER_PASSWORD }}"  # GitHub Secrets에서 저장한 Docker 자격 증명 사용
