--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,13 +44,13 @@ jobs:
 
       - name: Build Docker image  # Step 6: 어플리케이션용 Docker 이미지 빌드
         run: |
-          docker build . -t ${{ secrets.DOCKER_USERNAME }}/BE5SecondProjectAuction:${{ github.sha }}  # GitHub SHA로 태그한 Docker 이미지 빌드
-          docker tag ${{ secrets.DOCKER_USERNAME }}/BE5SecondProjectAuction:${{ github.sha }} ${{ secrets.DOCKER_USERNAME }}/BE5SecondProjectAuction:latest  # Docker 이미지를 'latest'로 태그
+          docker build . -t ${{ secrets.DOCKER_USERNAME }}/be5:${{ github.sha }}  # GitHub SHA로 태그한 Docker 이미지 빌드
+          docker tag ${{ secrets.DOCKER_USERNAME }}/be5:${{ github.sha }} ${{ secrets.DOCKER_USERNAME }}/be5:latest  # Docker 이미지를 'latest'로 태그
 
       - name: Push Docker image to Docker Hub  # Step 7: Docker 이미지를 Docker Hub에 푸시
         run: |
-          docker push ${{ secrets.DOCKER_USERNAME }}/BE5SecondProjectAuction:${{ github.sha }}  # GitHub SHA로 태그된 Docker 이미지 푸시
-          docker push ${{ secrets.DOCKER_USERNAME }}/BE5SecondProjectAuction:latest  # 'latest' Docker 이미지 푸시
+          docker push ${{ secrets.DOCKER_USERNAME }}/be5:${{ github.sha }}  # GitHub SHA로 태그된 Docker 이미지 푸시
+          docker push ${{ secrets.DOCKER_USERNAME }}/be5:latest  # 'latest' Docker 이미지 푸시
 
       - name: Deploy to server  # Step 8: 서버에 어플리케이션 배포
         uses: appleboy/ssh-action@v1.0.3  # SSH 액션(v1.0.3)을 사용하여 SSH로 배포
@@ -60,7 +60,7 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}  # GitHub Secrets에서 저장한 SSH 개인 키 사용
           port: 22  # SSH 포트
           script: |
-            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/BE5SecondProjectAuction:${{ github.sha }}  # 특정 태그의 Docker 이미지 풀
-            sudo docker stop BE5SecondProjectAuction || true  # 실행 중인 Docker 컨테이너 중지 (오류 무시)
-            sudo docker rm BE5SecondProjectAuction || true  # Docker 컨테이너 삭제 (오류 무시)
-            sudo docker run -d -p 8080:8080 --network app-network --name BE5SecondProjectAuction ${{ secrets.DOCKER_USERNAME }}/BE5SecondProjectAuction:${{ github.sha }}  # 지정된 옵션으로 Docker 컨테이너 실행
+            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/be5:${{ github.sha }}  # 특정 태그의 Docker 이미지 풀
+            sudo docker stop be5 || true  # 실행 중인 Docker 컨테이너 중지 (오류 무시)
+            sudo docker rm be5 || true  # Docker 컨테이너 삭제 (오류 무시)
+            sudo docker run -d -p 8080:8080 --network app-network --name be5 ${{ secrets.DOCKER_USERNAME }}/be5:${{ github.sha }}  # 지정된 옵션으로 Docker 컨테이너 실행
