--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@shadcn/ui": "^0.0.4",
     "@stomp/stompjs": "^7.0.1",
     "axios": "^1.8.3",
     "class-variance-authority": "^0.7.1",
