--- a/backEnd/build.gradle
+++ b/backEnd/build.gradle
@@ -24,6 +24,9 @@ repositories {
 }
 
 dependencies {
+
+    implementation 'com.github.maricn:logback-slack-appender:1.3.0'  // SlackAppender 의존성 추가
+
     // JJWT 최신 버전 (0.12.6) 추가
     implementation("io.jsonwebtoken:jjwt-api:0.12.6")
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
